# urvs_rgz23

./: .gitignore  CMakeLists.txt  README.md  compile.bat  compile.ps1
SEND/project/src/: CMakeLists.txt  main.cpp
include/config/: config.h
src/: main.cpp
src/cfg/: config.h.in
src/lib/: time_info.cpp
